# tick

./: .gitignore  CLAUDE.md  README.md  biome.json  docker-compose.yml  mprocs.yaml  package.json  skills-lock.json
.agents/skills/cmk-codebase-docs/: SKILL.md  eval.json
.agents/skills/cmk-worktree-dev-env/: SKILL.md  eval.json
.claude/skills/: cmk-codebase-docs  cmk-worktree-dev-env
.github/workflows/: deploy-dev.yml
docs/decisions/: 0008-tick-oracle-wire-protocol.md  0009-tick-api-cross-service-contracts.md  0010-tick-onchain-vault-custody-and-settlement.md  0011-walrus-per-tap-proof-anchoring.md  0012-tick-near-cell-floor-above-pacifica.md  0013-tick-platform-identity-jwt-integration.md
docs/superpowers/plans/: 2026-05-23-tick-backend-foundation-pricing-engine.md  2026-05-27-tick-api-tap-commit.md  2026-05-27-tick-dev-env-and-migrate-runner.md  2026-05-27-tick-onchain-vault.md  2026-05-27-tick-oracle-aggregator.md  2026-05-27-tick-settlement-worker.md  2026-05-27-tick-spec-sync-vault-walrus.md  2026-05-27-tick-vault-worker-integration.md  2026-05-27-tick-walrus-proofs.md  2026-05-28-tick-ui-off-chain.md  2026-06-08-tick-platform-identity-integration.md  2026-06-11-tick-chart-perception-fix-and-10s-window.md  2026-06-14-tick-onchain-vault-walrus-proofs.md  2026-06-20-tick-landing-page.md
docs/superpowers/specs/: 2026-05-28-tick-ui-off-chain-design.md  2026-06-10-tick-points-economy-design.md  2026-06-11-tick-chart-perception-fix-and-10s-window-design.md  2026-06-14-tick-onchain-vault-walrus-proofs-design.md  2026-06-20-tick-landing-page-design.md
games/: README.md
games/tap-trading/backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  clippy.toml
games/tap-trading/backend/api/: .env.example  Cargo.toml
games/tap-trading/backend/api/src/: account_ctx.rs  aggregator_client.rs  db.rs  error.rs  history.rs  lib.rs  main.rs  metrics.rs  now.rs  state.rs  validation.rs
games/tap-trading/backend/api/src/handlers/: deposit.rs  health.rs  me.rs  mod.rs  positions.rs  stream.rs  withdraw.rs
games/tap-trading/backend/api/src/middleware/: account_id.rs  mod.rs  rate_limit.rs
games/tap-trading/backend/api/tests/: concurrency.rs  get_history.rs  get_me.rs  idempotency.rs  lock_at_tap.rs  metrics.rs  middleware_account_id.rs  notify.rs  post_positions_errors.rs  post_positions_happy.rs  rate_limit.rs  ws_stream.rs
games/tap-trading/backend/api/tests/common/: mod.rs
games/tap-trading/backend/migrate/: Cargo.toml
games/tap-trading/backend/migrate/src/: lib.rs  main.rs
games/tap-trading/backend/migrate/tests/: migrate.rs
games/tap-trading/backend/migrations/: 20260523120000_create_tick_schema.sql  20260614000000_add_usdc_settle_mode.sql  20260620150000_add_usdc_deposit_withdraw.sql  20260621000000_swap_positions_asset_check_sol_to_sui.sql  20260622000000_add_settlement_proof_index.sql
games/tap-trading/backend/oracle-aggregator/: .env.example  Cargo.toml
games/tap-trading/backend/oracle-aggregator/src/: aggregator.rs  api.rs  broadcast.rs  config.rs  constants.rs  driver.rs  main.rs  ring_buffer.rs  runtime.rs  vol_state.rs
games/tap-trading/backend/oracle-aggregator/src/sources/: binance.rs  bybit.rs  mod.rs  okx.rs  pyth.rs
games/tap-trading/backend/oracle-aggregator/tests/: aggregation.rs  backoff.rs  end_to_end.rs  replay_http.rs  ring_buffer.rs
games/tap-trading/backend/oracle-types/: Cargo.toml
games/tap-trading/backend/oracle-types/src/: lib.rs
games/tap-trading/backend/pricing-engine/: Cargo.toml  README.md
games/tap-trading/backend/pricing-engine/proptest-regressions/: bgk.txt  multiplier.txt  vol.txt
games/tap-trading/backend/pricing-engine/src/: bgk.rs  constants.rs  error.rs  hui.rs  lib.rs  multiplier.rs  types.rs  vol.rs
games/tap-trading/backend/pricing-engine/tests/: quantlib_parity.rs
games/tap-trading/backend/pricing-engine/tests/fixtures/: quantlib.json  quantlib_onetouch.json
games/tap-trading/backend/proof-types/: Cargo.toml
games/tap-trading/backend/proof-types/src/: lib.rs
games/tap-trading/backend/proof-verifier/: Cargo.toml
games/tap-trading/backend/proof-verifier/src/: lib.rs
games/tap-trading/backend/proof-verifier/tests/fixtures/: proof_won.json
games/tap-trading/backend/settlement-worker/: .env.example  Cargo.toml
games/tap-trading/backend/settlement-worker/src/: cache.rs  error.rs  health.rs  leader.rs  lib.rs  loop_runner.rs  main.rs  onchain.rs  proof_flusher.rs  settle.rs  touch.rs
games/tap-trading/backend/settlement-worker/tests/: cache_hydrate.rs  concurrency.rs  leader_election.rs  listen_notify.rs  loss_settlement.rs  proof_flush.rs  sweep.rs  void_path.rs  win_settlement.rs
games/tap-trading/backend/settlement-worker/tests/common/: mod.rs
games/tap-trading/backend/touch/: Cargo.toml
games/tap-trading/backend/touch/src/: lib.rs
games/tap-trading/deploy/: .env.example  .gitignore  Caddyfile  README.md  docker-compose.yml  onchain.env.example
games/tap-trading/docs/: MATH_SPEC.md  ORACLE_SPEC.md  PRD.md  SYSTEM_DESIGN.md  TESTING_STRATEGY.md
games/tap-trading/move/tick_e2e_coin/: Move.toml  Published.toml
games/tap-trading/move/tick_e2e_coin/sources/: e2e_coin.move
games/tap-trading/move/tick_vault/: Move.toml
games/tap-trading/move/tick_vault/sources/: vault.move
games/tap-trading/move/tick_vault/tests/: coin_dummy.move  vault_tests.move
games/tap-trading/scripts/: deploy-tick-vault.sh  gen-quantlib-fixtures.py  jsonrpc_sui.py
games/tap-trading/ui/: .env.production.local  index.html  package.json  tsconfig.app.json  vite.config.ts
games/tap-trading/ui/public/: browserconfig.xml  site.webmanifest
games/tap-trading/ui/src/: App.tsx  index.css  main.tsx
games/tap-trading/ui/src/components/: AssetIcon.tsx  AssetSelector.tsx  Cell.tsx  DebugOverlay.tsx  Grid.tsx  HeaderBar.tsx  HistoryStrip.tsx  PositionTracker.tsx  PriceLine.tsx  ProofEvidenceSparkline.tsx  StakeSelector.tsx  Toaster.tsx  VerifyDrawer.tsx  WalletDrawer.tsx
scripts/: ensure-worktree-coherence.sh  init-worktree-dev.sh  logs.sh  start-headless.sh  sync-service-envs.sh  worktree-env.sh
(+76 files in other folders)
