[package]
name = "tap-trading-api"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "tap-trading-api"
path = "src/main.rs"

[dependencies]
tap-trading-pricing-engine = { path = "../pricing-engine" }
tap-trading-migrate = { path = "../migrate" }
tap-trading-oracle-types = { path = "../oracle-types" }

axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
reqwest = { workspace = true }
redis = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prometheus = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
wiremock = { workspace = true }
tokio = { workspace = true, features = ["full"] }
