[package]
name = "tap-trading-pricing-engine"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
libm = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[[bin]]
name = "gen_fixtures"
path = "src/bin/gen_fixtures.rs"
