[package]
name = "tap-trading-settlement-worker"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "tap-trading-settlement-worker"
path = "src/main.rs"

[lib]
name = "tap_trading_settlement_worker"
path = "src/lib.rs"

[dependencies]
tap-trading-pricing-engine = { path = "../pricing-engine" }
tap-trading-oracle-types = { workspace = true }
tap-trading-touch = { workspace = true }
tap-trading-proof-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tap-trading-proof-verifier = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
uuid = { workspace = true }
wiremock = { workspace = true }
